--- a/farmer/ignition.yaml
+++ b/farmer/ignition.yaml
@@ -1,13 +1,13 @@
 variant: fcos
 version: 1.3.0
-# storage:
-#   filesystems:
-#   - device: /dev/sdf1
-#     format: xfs
-#     path: /mnt/scratch
-#   - device: /dev/sdh1
-#     format: xfs
-#     path: /mnt/plot1
+storage:
+  filesystems:
+  - device: /dev/sdf1
+    format: xfs
+    path: /mnt/scratch
+  - device: /dev/sdh1
+    format: xfs
+    path: /mnt/plot1
 # systemd:
 #   units:
 #   - name: chia-farmer
